--- a/locale/zh_CN/LC_MESSAGES/BetterForward.po
+++ b/locale/zh_CN/LC_MESSAGES/BetterForward.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BetterForward\n"
 "POT-Creation-Date: 2025-11-12 18:37+0800\n"
-"PO-Revision-Date: 2025-11-12 18:37+0800\n"
+"PO-Revision-Date: 2025-11-12 18:49+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -616,7 +616,7 @@ msgstr "启用后，被拉黑的用户发送消息时将收到此回复。"
 #: src/handlers/admin_handler.py:962
 #, python-brace-format
 msgid "Blocked user auto-reply has been {}."
-msgstr "拉黑用户自动回复已{}。"
+msgstr "拉黑用户自动回复{}。"
 
 #: src/handlers/admin_handler.py:969
 msgid ""
